# twitch-birdteam

./: .gitignore  Makefile  README.md  asgi.py  config.py  pyproject.toml  requirements.txt
twitch_bot/: __init__.py  bot.py  eventsub.py
